[tool.poetry]
name = "garoupa"
version = "2.210907.1"
description = "Predictable operable hash-based identifiers and abstract algebra groups"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "garoupa", from = "src" },
]

# For more dependencies and faster execution: poetry install -E full
# hosh may not be updated yet!
[tool.poetry.extras]
full = ["progress", "pathos", "numpy", "hosh"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"
blake3 = "^0.1.8"
colored = "^1.4.2"
progress = { version = "^1.5", optional = true }
pathos = { version = "^0.2.7", optional = true }
#hosh = { version = "^2.210810.0", optional = true }
pdoc3 = "^0.10.0"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
progress = "^1.5"
pathos = "^0.2.7"
numpy = "^1.20.1"
ipython = "^7.27.0"
# hosh = "^2.210810.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "dvpypi"
url = "http://localhost:8080/simple"
