[tool.poetry]
name = "garoupa"
version = "2.210912.1"
description = "Predictable operable hash-based identifiers and abstract algebra groups"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "garoupa", from = "src" },
]

# For more dependencies and faster execution: poetry install -E full
# hosh may not be updated yet!
[tool.poetry.extras]
full = ["progress", "pathos", "numpy", "hosh"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
wheel = "^0.37.0"
blake3 = "^0.2.0"
colored = "^1.4.2"
pdoc3 = "^0.10.0"
ansi2html = "^1.6.0"
#hosh = { version = "^2.210810.0", optional = true }
progress = { version = "^1.6", optional = true }
pathos = { version = "^0.2.8", optional = true }

[tool.poetry.dev-dependencies]
# hosh = "^2.210810.0"
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
progress = "^1.6"
pathos = "^0.2.8"
numpy = "^1.21.2"
ipython = "^7.27.0"
bigfloat = { version = "^0.4.0", optional = true }
pypi-server = "^0.4.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# 
# [[tool.poetry.source]]
# name = "dvpypi"
# url = "http://localhost:8080/simple"
