[tool.poetry]
name = "garoupa"
version = "2.211212.2"
description = "Predictable operable hash-based identifiers and abstract algebra groups"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "garoupa", from = "src" },
]

# For faster execution: poetry install -E native
# For more dependencies to use algebra modules: poetry install -E algebra
[tool.poetry.extras]
native = ["hosh"]
algebra = ["progress", "pathos", "numpy"]
experiments = ["bigfloat"]

[tool.poetry.dependencies]
python = ">=3.8"
wheel = "^0.37.0"
blake3 = "^0.2.0"
colored = "1.4.2"
ansi2html = "^1.6.0"
#hosh = { version = "^2.0.0", optional = true }  #  not implemented yet
progress = { version = "^1.6", optional = true }
pathos = { version = "^0.2.8", optional = true }
# numpy = { version = "^1.21.2", optional = true }
bigfloat = { version = "^0.4.0", optional = true }

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
progress = "^1.6"
pathos = "^0.2.8"
#numpy = "^1.21.2"
ipython = "^7.27.0"
pypi-server = "^0.4.8"
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# 
# [[tool.poetry.source]]
# name = "dvpypi"
# url = "http://localhost:8080/simple"
